# rust_aoc_template

./: .gitignore  Cargo.toml  README.md
src/: day.rs  day1.rs  day9.rs  main.rs  utils.rs
