[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
once_cell = "1.20.2"
reqwest = { version = "0.12.8", features = ["blocking"] }
# rayon = "1.10.0"
smallvec = "1.13.2"
